fixed the bug regarding with Banner compo overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 .scroll-to-top {
   color: orangered;
@@ -10,7 +11,7 @@
   cursor: pointer;
 }
 .scroll-to-top_upArrow {
-  font-size: 1.5rem;
+  font-size: 1.5rem;  
   padding: 0.0001rem 0.3rem;
   margin-right: 0.5rem;
   
